--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="lvlanxing" name="author">
 <title>404</title>
-<link rel="shortcut icon" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/favicon.ico">
+<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/popzoo/pop/images/favicon.ico">
 <meta content="404" name="Keywords">
 <style type="text/css">
-    body{background:url('https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/404.jpg') no-repeat fixed;background-size:100% 100%;-moz-background-size:100% 100%;}
+    body{background:url('https://cdn.jsdelivr.net/gh/popzoo/pop/images/404.jpg') no-repeat fixed;background-size:100% 100%;-moz-background-size:100% 100%;}
     .statcss {position:absolute;bottom:2%;left:50%;margin-left: -300px;text-align: center; width: 600px; font-size: 15px;color:orange;background-color: rgba(53,53,53,0.7);border-radius: 5px;padding-bottom: 10px; }
     .statcss a:link {color: orange;text-decoration: none;}
     .statcss a:visited {text-decoration: none;color: orange;}
