--- a/manyOpen.html
+++ b/manyOpen.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="lvlanxing" name="author">
 <title>云弹幕教程</title>
-<link rel="shortcut icon" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/favicon.ico">
+<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/popzoo/pop/images/favicon.ico">
 <!-- https://raw.githubusercontent.com/popzoo/pop/master/images/favicon.ico -->
 <meta content="教程" name="Keywords">
 <link rel="stylesheet" href="css/time_line.css">
@@ -80,6 +80,6 @@
   </footer>
 	<canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
 </div>
-<script src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/spirit_bubble.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/popzoo/zoo/js/spirit_bubble.js"></script>
 </body>
 </html>
