--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -28,7 +28,7 @@
   <div id="control_show_login" style="text-align: center; max-width: 550px; margin: 50px auto 0;padding: 10px 10px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:inherit;">
     <p style="font-size: 34px;font-weight: 600;color: blue;margin: 10px auto 0;">薅羊毛用户隐藏教程</p>
     <div class="w1000" style="font-size: 20px;margin: 10px auto 0; ">
-        <span style="background-color:  rgba(144,238,144,0.9);border-radius: 4px;">开启隐藏教程:</span><input type="search" id="secret_pwd" placeholder="入Q群可获取教程密码"  style="font-size: 20px;border-radius: 4px;">
+        <span style="background-color:  rgba(144,238,144,0.9);border-radius: 4px;">开启隐藏教程:</span><input type="search" id="secret_pwd" placeholder="关注公众号获取密码"  style="font-size: 20px;border-radius: 4px;">
         <input type="submit" value="开启" style="font-size: 20px;background-color:  rgba(144,238,144,0.9);border-radius: 4px;" id="open_hidden_btn"/>
     </div>  
   </div>
