--- a/danmuManual.html
+++ b/danmuManual.html
@@ -38,9 +38,9 @@
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">普通模板链接：</span>
-        <a style="color:#0563c1" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/jsonDanmu/commonTemplate.json" target="_blank">点击这里</a><br>
+        <a style="color:#0563c1" href="https://cdn.jsdelivr.net/gh/popzoo/barrage/json/commonTemplate.json" target="_blank">点击这里</a><br>
         <span style="font-family:等线; font-size:12pt; font-weight:bold">极简模板链接：</span>
-        <a style="color:#0563c1" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/jsonDanmu/easyTemplate.json" target="_blank">点击这里</a><br>
+        <a style="color:#0563c1" href="https://cdn.jsdelivr.net/gh/popzoo/barrage/json/easyTemplate.json" target="_blank">点击这里</a><br>
       </p>
       <p style="font-size:12pt; line-height:150%; margin-left: 24px; orphans:0; text-align:justify; widows:0">
         <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_1.png"/></p>
@@ -162,9 +162,9 @@
         <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_4.png"/></p>
       <ol start="5" type="1" style="margin:0pt; padding-left:0pt">
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
-          <span style="font-family:等线; font-size:12pt; font-weight:bold">5.弹幕文件准备好了，还有最最关键的一步，就是把自定义私有云弹幕库，放到网络云端（您私人专用），这样无论您切换到哪台电脑（家里或单位），都可以使用自己的云弹幕库。下面把json文件的名字(如template.json)改为自己斗鱼的昵称.json（要严格一致），比如我斗鱼的昵称叫”五花肉”，那么我的自定义弹幕文件名字为“五花肉.json”，不要有空格回车等无用占位符号(如果您后期更改了斗鱼昵称，则需要重新上传新昵称的弹幕文件)。然后来到网址</span>
-          <a style="color:#0563c1" href="https://popzoo.github.io/barrage/">
-            <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://popzoo.github.io/barrage/</span>
+          <span style="font-family:等线; font-size:12pt; font-weight:bold">5.弹幕文件准备好了，还有最最关键的一步，就是把自定义私有云弹幕库，放到网络云端（您私人专用），这样无论您切换到哪台电脑（家里或单位），都可以使用自己的云弹幕库。下面把json文件的名字(如template.json)改为自己斗鱼的昵称.json（要严格一致），比如我斗鱼的昵称叫”五花肉”，那么我的自定义弹幕文件名字为“五花肉.json”，不要有空格回车等无用占位符号(如果您后期更改了斗鱼昵称，则需要重新上传新昵称的弹幕文件)。然后来到</span>
+          <a style="color:#0563c1;text-decoration:none;" href="https://popzoo.github.io/barrage/">
+            <span style="color:#0563c1;font-size:12pt; font-weight:bold; ">【弹幕网站】</span>
           </a>
           <span style="font-family:等线; font-size:12pt; font-weight:bold">点击 “ 选择文件 ” ，或者将自己的文件 直接拖拽到选择文件正上方，然后 页面会自定识别并判断您的私有弹幕是否符合规则，不符合规则会提示您更改意见。</span>
       </ol>
