--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <div class="contrainer">
     <div class="w1000 header">
         <ul class='clearfix'>
-            <li class='float_six'><a href="https://www.popzoo.xyz/" style="color:gold;text-decoration:none;">时光轴</a></li>
-            <li class='float_six'><a href="https://pop.popzoo.xyz/" style="color:gold;text-decoration:none;">火力房</a></li>
-            <li class='float_six'><a href="https://danmu.popzoo.xyz/" style="color:gold;text-decoration:none;">云弹幕</a></li>
-            <li class='float_six'><a href="https://pop.popzoo.xyz/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
-            <li class='float_six'><a href="https://pop.popzoo.xyz/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
-            <li class='float_six'><a href="https://bi.popzoo.xyz" style="color:gold;text-decoration:none;">看板台</a></li>
+            <li class='float_six'><a id="own_time" href="https://www.popzoo.xyz/" style="color:gold;text-decoration:none;">时光轴</a></li>
+            <li class='float_six'><a id="own_fire" href="https://pop.popzoo.xyz/" style="color:gold;text-decoration:none;">火力房</a></li>
+            <li class='float_six'><a id="own_danmu" href="https://danmu.popzoo.xyz/" style="color:gold;text-decoration:none;">云弹幕</a></li>
+            <li class='float_six'><a id="own_gift" href="https://pop.popzoo.xyz/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
+            <li class='float_six'><a id="own_car" href="https://pop.popzoo.xyz/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
+            <li class='float_six'><a id="own_form" href="https://bi.popzoo.xyz" style="color:gold;text-decoration:none;">统计板</a></li>
         </ul>
     </div>
     <div class="w1000 tc body" >
@@ -50,7 +50,7 @@
 <script src="https://cdn.jsdelivr.net/gh/popzoo/zoo/js/spirit_bubble.js"></script>
 <script src='https://cdn.jsdelivr.net/gh/popzoo/zoo/js/jquery.eventFlow.js'></script>
 <script src="https://cdn.jsdelivr.net/gh/popzoo/zoo/js/timeLine.js"></script>
-<!-- <script src="timeLine.js"></script> -->
+<script src="https://cdn.jsdelivr.net/gh/popzoo/pop/js/renewLink.js"></script>  
 <script src="https://www.ownthink.com/bot/js/robot.js?appid=xiaosi"></script>
 </body>
 </html>
