--- a/manyOpen.html
+++ b/manyOpen.html
@@ -17,12 +17,12 @@
 <div class="contrainer">
 	<div class="w1000 header">
 		<ul class='clearfix'>
-      <li class='float_six'><a href="https://www.popzoo.xyz/" style="color:gold;text-decoration:none;">时光轴</a></li>
-      <li class='float_six'><a href="https://pop.popzoo.xyz/" style="color:gold;text-decoration:none;">火力房</a></li>
-      <li class='float_six'><a href="https://danmu.popzoo.xyz/" style="color:gold;text-decoration:none;">云弹幕</a></li>
-      <li class='float_six'><a href="https://pop.popzoo.xyz/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
-      <li class='float_six'><a href="https://pop.popzoo.xyz/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
-      <li class='float_six'><a href="https://bi.popzoo.xyz" style="color:gold;text-decoration:none;">看板台</a></li>
+      <li class='float_six'><a id="own_time" href="https://www.popzoo.xyz/" style="color:gold;text-decoration:none;">时光轴</a></li>
+      <li class='float_six'><a id="own_fire" href="https://pop.popzoo.xyz/" style="color:gold;text-decoration:none;">火力房</a></li>
+      <li class='float_six'><a id="own_danmu" href="https://danmu.popzoo.xyz/" style="color:gold;text-decoration:none;">云弹幕</a></li>
+      <li class='float_six'><a id="own_gift" href="https://pop.popzoo.xyz/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
+      <li class='float_six'><a id="own_car" href="https://pop.popzoo.xyz/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
+      <li class='float_six'><a id="own_form" href="https://bi.popzoo.xyz" style="color:gold;text-decoration:none;">统计板</a></li>
 		</ul>
 	</div>
 
@@ -80,6 +80,7 @@
   </footer>
 	<canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
 </div>
+<script src="https://cdn.jsdelivr.net/gh/popzoo/zoo/js/spirit_bubble.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/popzoo/zoo/js/spirit_bubble.js"></script>
 </body>
 </html>
