--- a/personal.html
+++ b/personal.html
@@ -18,11 +18,11 @@
     <div style="position: absolute; height:30px; color:purple; line-height:30px; margin-left: -140px;margin-top: 20px; padding:5px 0 10px 50%; font-size:30px; font-family: Arial,Microsoft YaHei,'宋体';">
         🌻薅羊毛定制功能🌻
         <span class="collapse" style="text-align: right;white-space: nowrap; margin-right: 50px; font-size: 20px;"> 
-            <a style="text-decoration:none;" href="https://popzoo.github.io/zoo/">时光轴</a> •
-            <a style="text-decoration:none;" href="https://pop.popzoo.xyz/">火力房</a> •
-            <a style="text-decoration:none;" href="https://danmu.popzoo.xyz/">云弹幕</a> •
-            <a style="text-decoration:none;" href="https://pop.popzoo.xyz/giftshow.html">礼物秀</a> •
-            <a style="text-decoration:none;" href="https://pop.popzoo.xyz/motorcade.html">车队展</a>
+            <a style="text-decoration:none;" id="own_time" href="https://popzoo.github.io/zoo/">时光轴</a> •
+            <a style="text-decoration:none;" id="own_fire" href="https://pop.popzoo.xyz/">火力房</a> •
+            <a style="text-decoration:none;" id="own_danmu" href="https://danmu.popzoo.xyz/">云弹幕</a> •
+            <a style="text-decoration:none;" id="own_gift" href="https://pop.popzoo.xyz/giftshow.html">礼物秀</a> •
+            <a style="text-decoration:none;" id="own_car" href="https://pop.popzoo.xyz/motorcade.html">车队展</a>
         </span>
     </div>
     <div style="position: absolute;left: 50%; top: 12%;line-height: 35px;  text-align: center;margin-left: -400px;max-width: 800px;">
@@ -322,7 +322,7 @@ void main(void) {
     gl_FragColor.a = 1.0;
 }
 </script>
-<!-- <script src="js/flower.js"></script> -->
 <script src="https://cdn.jsdelivr.net/gh/popzoo/zoo/js/bg-flower.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/popzoo/pop/js/renewLink.js"></script> 
 </body>
 </html>
