--- a/danmuManual.html
+++ b/danmuManual.html
@@ -206,7 +206,7 @@
     <!-- <footer class="statcss" style="background-color: rgba(202,225,255,0.7);"> -->
   <footer class="statcss" style="margin-top: 30px;">
     <p>ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM INTERNET</p>
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+    <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278032070' type='text/javascript'%3E%3C/script%3E"));</script>
   </footer>
     <canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
 </div>
