--- a/danmuManual.html
+++ b/danmuManual.html
@@ -211,6 +211,6 @@
     <canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/popzoo/zoo/js/spirit_bubble.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/popzoo/pop/js/renewLink.js"></script>  
+<!-- <script src="https://cdn.jsdelivr.net/gh/popzoo/pop/js/renewLink.js"></script>   -->
 </body>
 </html>
