--- a/personal.html
+++ b/personal.html
@@ -324,6 +324,6 @@ void main(void) {
 </script>
 <script src="https://cdn.jsdelivr.net/gh/popzoo/zoo/js/bg-flower.js"></script>
 <!-- <script src="https://cdn.jsdelivr.net/gh/popzoo/pop/js/renewLink.js"></script>  -->
-  <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278032070' type='text/javascript'%3E%3C/script%3E"));</script>
+  <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript stype='display:none' src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278032070' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
